# reinvention-suite

./: .env.example  .gitignore  .npmrc  README.md  docker-compose.yml  edgeone.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api-go/: README.md  go.mod
apps/api-go/cmd/api/: main.go
apps/api-go/internal/ai/: llm.go
apps/api-go/internal/db/: db.go
apps/api-go/internal/handlers/: diagnose.go
apps/api-go/internal/models/: types.go
apps/scraper/: .env.example  Dockerfile  main.py  pyproject.toml
apps/scraper/src/scrapers/: __init__.py  base.py  company_careers.py  gov_procurement.py  hrss_bulletin.py  manager.py  opportunity_scorer.py
apps/web/: .env.local.bak  .env.local.example  Dockerfile  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/lib/: utils.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/prompts/: ai-diagnosis.py  multi-turn-diagnosis.ts
cloud-functions/api-go/: go.mod  main.go
deploy/nginx/: nginx.conf
docs/: DATABASE.md  DEPLOY-NOW.md  DEPLOYMENT-2026-NEW.md  DEPLOYMENT-CN.md  DEPLOYMENT-FREE.md  DEPLOYMENT.md  PRD-v2.md  PRODUCT-VISION.md
docs/ai-quality/: 01-goal-prompt-template.md  02-quality-rubric.md  03-six-step-sop.md  04-verification-checklist.md  05-blocker-protocol.md  06-current-status.md
docs/to-g/: 01-sales-playbook.md  02-solution-whitepaper.md  03-government-bd-jd.md  04-compliance-roadmap.md  05-results-report-template.md  06-gov-dashboard-advanced.md
(+72 files in other folders)
