[project]
name = "reinvention-scraper"
version = "0.1.0"
description = "Reinvention Suite — Python 爬虫微服务（基于 Scrapling）"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "Reinvention Team" }]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Scraping Core
    "scrapling>=0.3.0",
    "playwright>=1.48.0",
    # HTTP & Async
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    # Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.14.0",
    # Utils
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.28.0",
    "httpx[http2]>=0.27.0",
]

[project.scripts]
reinvention-scraper = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
